writing table in portrait mode prevent overflowing

--- a/books/Valley_of_Dragons/Attack_of_the_Dark_God/contents/writing_table/writing_table.css
+++ b/books/Valley_of_Dragons/Attack_of_the_Dark_God/contents/writing_table/writing_table.css
@@ -213,19 +213,25 @@ button:hover {
         display: none; /* Save space on mobile */
     }
     .grid {
-        padding: 0.9375rem;
-        grid-template-columns: 2.8125rem repeat(5, 3.4375rem) 2.8125rem 6.875rem;
-        gap: 0.3125rem;
-        overflow-x: auto;
-        justify-content: start;
+        padding: 2vw;
+        grid-template-columns: 8.5vw repeat(5, 10vw) 8.5vw 21.2vw;
+        gap: 1.1vw;
+        overflow-x: hidden;
+        width: 100%;
+        box-sizing: border-box;
+        justify-content: center;
     }
     .grid > * {
-        height: 2.8125rem;
-        font-size: 1.1rem;
+        height: 7.1vw;
+        font-size: 3.2vw;
+        border-radius: 1vw;
     }
     .word-input {
-        height: 2.8125rem;
-        padding: 0 0.5rem;
-        font-size: 0.9rem;
+        height: 7.1vw;
+        padding: 0 2vw;
+        font-size: 2.3vw;
+    }
+    .heading {
+        font-size: 2.5vw !important;
     }
 }
